--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,1 +1,90 @@
 /* app css stylesheet */
+body {
+    padding-top: 20px;
+}
+
+
+.employee-images {
+    width: 450px;
+    height: 450px;
+    overflow: hidden;
+    position: relative;
+    float: left;
+}
+
+.employees {
+    list-style: none;
+}
+
+.thumb {
+    margin: -1em 1em 1.5em 0em;
+    padding-bottom: 1em;
+    height: 100px;
+    width: 100px;
+}
+
+.employees li {
+    clear: both;
+    height: 100px;
+    padding-top: 15px;
+}
+
+/** Detail View **/
+img.employee {
+    float: left;
+    margin-right: 3em;
+    margin-bottom: 2em;
+    background-color: white;
+    padding: 2em;
+    height: 400px;
+    width: 400px;
+}
+
+ul.employee-thumbs {
+    margin: 0;
+    list-style: none;
+}
+
+ul.employee-thumbs li {
+    border: 1px solid black;
+    display: inline-block;
+    margin: 1em;
+    background-color: white;
+}
+
+ul.employee-thumbs img {
+    height: 100px;
+    width: 100px;
+    padding: 1em;
+}
+
+ul.employee-thumbs img:hover {
+    cursor: pointer;
+}
+
+
+ul.specs {
+    clear: both;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+ul.specs > li{
+    display: inline-block;
+    width: 200px;
+    vertical-align: top;
+}
+
+ul.specs > li > span{
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+ul.specs dt {
+    font-weight: bold;
+}
+
+h1 {
+    border-bottom: 1px solid gray;
+}
