--- a/app/partials/employees_list.html
+++ b/app/partials/employees_list.html
@@ -26,7 +26,7 @@
 
             <ul>
                 <li ng-repeat="employee in employees | filter:query | orderBy:orderProp">
-                    <a href="#/employees/{{employee._id}}" class="thumb"><img ng-src="{{employee.photoUrl}}" style="width:150px;min-height:150px;" /></a>
+                    <a href="#/employees/{{employee._id}}" class="thumb"><img ng-src="{{employee.photoUrl}}" style="width:150px;min-height:150px;margin-bottom:5px" /></a>
                     <a href="#/employees/{{employee._id}}">{{employee.firstName}} {{employee.lastName}}</a>
                 </li>
             </ul>
