fixed image size for employee view

--- a/app/partials/employees_details.html
+++ b/app/partials/employees_details.html
@@ -1,2 +1,2 @@
-<img ng-src="{{employee.photoUrl}}" class="employee">
+<img ng-src="{{employee.photoUrl}}" class="employee" style="width:auto;height: auto">
 <h1>{{employee.firstName}} {{employee.lastName}}</h1>
