--- a/app/partials/employees_list.html
+++ b/app/partials/employees_list.html
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-    <h1>Employees App<span class="label label-info">{{employees.length}}</span> </h1>
+    <h1>Employees App </h1>
 </div>
 <div class="container-fluid">
     <div class="row-fluid">
@@ -8,13 +8,15 @@
 
             <form>
                 <div>
-                    <h3 style="margin-top:50px"><span class="label label-info" > Додај нов</span> </h3>
+                    <h3 style="margin-top: 50px">Add new</h3>
                     <input ng-model="formData.firstName" placeholder="First Name" class="form-control" style="margin-top: 10px">
                     <input ng-model="formData.lastName" placeholder="Last Name" class="form-control" style="margin-top: 10px">
                     <input ng-model="formData.photoUrl" placeholder="Photo URL" class="form-control" style="margin-top: 10px">
                 </div>
-                <button type="submit" class="btn btn-primary btn-lg" ng-click="addEmployee()" style="margin-top: 10px">Додај</button>
+                <button type="submit" class="btn btn-primary btn-lg" ng-click="addEmployee()" style="margin-top: 10px">Add</button>
             </form>
+
+            <h3><span class="label label-info">Total number: {{employees.length}}</span></h3>
         </div>
 
         <div class="span10">
@@ -28,6 +30,7 @@
                 <li ng-repeat="employee in employees | filter:query | orderBy:orderProp" class="thumbnail employee-listing">
                     <a href="#/employees/{{employee._id}}" class="thumb"><img ng-src="{{employee.photoUrl}}" style="width:150px;min-height:150px;margin-bottom:5px" /></a>
                     <a href="#/employees/{{employee._id}}">{{employee.firstName}} {{employee.lastName}}</a>
+                    <button class="btn btn-danger btn-lg" ng-click="removeEmployee(employee._id)">Remove</button>
                 </li>
             </ul>
         </div>
