--- a/app/partials/employees_list.html
+++ b/app/partials/employees_list.html
@@ -13,10 +13,10 @@
                     <input ng-model="formData.lastName" placeholder="Last Name" class="form-control" style="margin-top: 10px">
                     <input ng-model="formData.photoUrl" placeholder="Photo URL" class="form-control" style="margin-top: 10px">
                 </div>
-                <button type="submit" class="btn btn-primary btn-lg" ng-click="addEmployee()" style="margin-top: 10px">Add</button>
+                <button type="submit" class="btn btn-primary" ng-click="addEmployee()" style="margin-top: 10px; width: 100%">Add</button>
             </form>
 
-            <h3><span class="label label-info">Total number: {{employees.length}}</span></h3>
+            <h3 class="text-center"><span class="label label-info">Total number: {{employees.length}}</span></h3>
         </div>
 
         <div class="span10">
