Added routing to page and the new page

--- a/app/partials/employees_list.html
+++ b/app/partials/employees_list.html
@@ -5,10 +5,10 @@
     <div class="row-fluid">
         <div class="span2">
             <input ng-model="query" placeholder="Search" class="form-control" >
+            <a href="#/employees/add_new"><h3 style="margin-top: 50px">Add new</h3></a>
 
             <form>
                 <div>
-                    <h3 style="margin-top: 50px">Add new</h3>
                     <input ng-model="formData.firstName" placeholder="First Name" class="form-control" style="margin-top: 10px">
                     <input ng-model="formData.lastName" placeholder="Last Name" class="form-control" style="margin-top: 10px">
                     <input ng-model="formData.photoUrl" placeholder="Photo URL" class="form-control" style="margin-top: 10px">
