--- a/app/partials/employees_list.html
+++ b/app/partials/employees_list.html
@@ -7,14 +7,14 @@
             <input ng-model="query" placeholder="Search" class="form-control" >
             <a href="#/employees/add_new"><h3 style="margin-top: 50px">Add new</h3></a>
 
-            <form>
+            <!--<form>
                 <div>
                     <input ng-model="formData.firstName" placeholder="First Name" class="form-control" style="margin-top: 10px">
                     <input ng-model="formData.lastName" placeholder="Last Name" class="form-control" style="margin-top: 10px">
                     <input ng-model="formData.photoUrl" placeholder="Photo URL" class="form-control" style="margin-top: 10px">
                 </div>
                 <button type="submit" class="btn btn-primary" ng-click="addEmployee()" style="margin-top: 10px; width: 100%">Add</button>
-            </form>
+            </form> -->
 
             <h3 class="text-center"><span class="label label-info">Total number: {{employees.length}}</span></h3>
         </div>
